fix4/onboarding page. fix overflow.

--- a/src/components/onboarding-layout/onboarding-layout.module.css
+++ b/src/components/onboarding-layout/onboarding-layout.module.css
@@ -7,4 +7,5 @@
 	min-height: 100vh;
 	position: relative;
 	width: 100%;
+	overflow: hidden;
 }
